# parm_extended

./: .gitignore  LICENSE  README.md  a.out  lca_expanded.raw  lca_expanded.s  test2.s  test_digital.raw  test_digital.s  test_load_pc.raw  test_load_pc.s  test_trampoline.raw  test_trampoline.s  test_trampoline2.raw  test_trampoline2.s  trampo.s
asm/: assembleur.py
code_c/: Makefile  aff.c  aff.s  arrdyn.c  arrdyn.s  caesar.s  calckeyb.c  calckeyb.s  calculator.c  calculator.s  charmap.c  charmap.s  compile.sh  crypto.c  crypto.s  enigma.c  (+59 more)
code_rs/test/: Cargo.toml  a.out  asm.hex  link.x  telnetrunner.sh  telnetrunner_video.sh  testfp.out
code_rs/test/.cargo/: config.toml
code_rs/test/basic/: fib.bas  load.sh
code_rs/test/midi/: load.sh  ob_la_di.mid
code_rs/test/scheme/: accum.rkt  case.ss  compose.rkt  depth_flat.rkt  env.ss  eval.ss  fibstream.rkt  fold.rkt  gallesio.ss  hanoi.rkt  infer.rkt  load.sh  macro_case.rkt  macro_def_func.rkt  macro_for.rkt  macro_lambda_star.rkt  macro_named_let.rkt  macro_oop.rkt  macro_record.rkt  macro_stack.rkt  macro_trace.rkt  macro_while.rkt  named_let.rkt  prog1.rkt  quasiquote.ss  tco.rkt  test_cond.rkt  test_dot.ss  trees.rkt
code_rs/test/src/: ball.rs  basic.rs  basic.rs.bak  basic.rs.old  calckeyb.rs  calculator.rs  lisp.rs  lisprepl.rs  main.rs  midi.rs  minimal.rs  parmweb.rs  plotter.rs  simpletelnet.rs  telnet_video.rs  testdyn.rs  testdyn.rs.old  testfp.rs  testrgb.rs  truc.rs
code_rs/test/src/lisp/: env.rs  eval.rs  mod.rs  parse.rs  val.rs
code_rs/test/src/lisp/eval/: builtins.rs  call.rs  conditionals.rs  forms.rs  lambda.rs  let.rs  quote.rs
code_rs/test/src/lisp/eval/builtins/: booleans.rs  boxes.rs  debugging.rs  equality.rs  exceptions.rs  hash_tables.rs  io.rs  numbers.rs  pairs_lists.rs  procedures.rs  promises.rs  strings.rs  symbols.rs  syntax.rs  void.rs
code_rs/test/src/parm/: control.rs  fixed.rs  float.rs  heap.rs  heap.rs.old  keyb.rs  math.rs  midi.rs  mmio.rs  mod.rs  rand.rs  rgb.rs  screen.rs  telnet.rs  tty.rs  util.rs
code_rs/test/src/parm/heap/: budmap.rs  string.rs  vec.rs
code_rs/test/src/parm/screen/: tty.rs
code_rs/test/src/parm/util/: fxhash.rs
(+119 files in other folders)
