[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "calculator"
path = "src/calculator.rs"

[[bin]]
name = "calckeyb"
path = "src/calckeyb.rs"

[[bin]]
name = "testfp"
path = "src/testfp.rs"

[[bin]]
name = "testrgb"
path = "src/testrgb.rs"

[[bin]]
name = "testdyn"
path = "src/testdyn.rs"

[[bin]]
name = "basic"
path = "src/basic.rs"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

