[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "1.0.6"

[[bin]]
name = "calculator"
path = "src/calculator.rs"

[[bin]]
name = "calckeyb"
path = "src/calckeyb.rs"

[[bin]]
name = "testfp"
path = "src/testfp.rs"

[[bin]]
name = "testrgb"
path = "src/testrgb.rs"

[[bin]]
name = "testdyn"
path = "src/testdyn.rs"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "plotter"
path = "src/plotter.rs"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

