[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "1.0.6"
#approx = { version = "0.5.1", default-features = false }
#nalgebra = { version = "0.31.0", default-features = false, features = ["macros", "nalgebra-macros"] }
#num-traits = { version = "0.2.15", default-features = false }
#simba = { version = "0.7.1", default-features = false }

[[bin]]
name = "calculator"
path = "src/calculator.rs"

[[bin]]
name = "calckeyb"
path = "src/calckeyb.rs"

[[bin]]
name = "testfp"
path = "src/testfp.rs"

[[bin]]
name = "testrgb"
path = "src/testrgb.rs"

[[bin]]
name = "testdyn"
path = "src/testdyn.rs"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "plotter"
path = "src/plotter.rs"

[[bin]]
name = "parmweb"
path = "src/parmweb.rs"

[[bin]]
name = "telnet_video"
path = "src/telnet_video.rs"

[[bin]]
name = "simpletelnet"
path = "src/simpletelnet.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"

